--- a/style.css
+++ b/style.css
@@ -1,30 +1,94 @@
-body{
+body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
+    padding: 20px;
 }
 
-h1,h2,p{
+h1,h2,p {
     text-align: center;
 }
 
-.menu{
+.established{
+    font-style: italic;
+}
+
+hr {
+    height: 2px;
+    background-color: brown;
+    border-color: brown;
+}
+
+.menu {
     width: 80%;
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
+    max-width: 500px;
 }
 
-.item p{
+.item p {
     display: inline-block;
+    font-size: 17px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.flavor, .dessert{
+.flavor,
+.dessert {
     text-align: left;
     width: 75%;
 }
 
-.price{
+.price {
     text-align: right;
     width: 25%;
+}
+
+.bottom-line {
+    margin-top: 25px;
+}
+
+h1,h2 {
+    font-family: Impact, serif;
+}
+
+h1 {
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-top: -25px;
+}
+
+/* Footer */
+
+footer {
+    font-size: 14px;
+}
+
+a {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: brown;
+}
+
+a:active {
+    color: brown;
 }
